# af-interview

./: Cargo.toml  README.md
examples/: const_thrust.rs
presentation/: index.html
presentation/plots/: d_0.1.html  final.html  i_0.01.html  i_0.1.html  p_0.01-d_0.01.html  p_0.01.html  p_0.05-d_0.01.html  p_0.075-d_0.1.html  p_0.1.html  zero_gains.html
src/: lib.rs  main.rs  pid.rs  plot.rs  sim.rs
