[package]
name = "sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32"
rand_distr = "0.4"
rand = "0.8"
plotly = "0.8.3"
rerun = "0.5.1"
uuid = {version="1.3.3", features=["v4"]}
serde = "1.0.163"
